force-app/main/default/objects/POE_Providers_Identifier__mdt/POE_Providers_Identifier__mdt.object-meta.xml
<CustomObject>
    <label>Providers Identifier</label>
    <pluralLabel>Providers Identifiers</pluralLabel>
</CustomObject>