force-app/main/default/objects/POE_Providers_Identifier__mdt/fields/affiliate__c.field-meta.xml
<CustomField>
    <fullName>affiliate__c</fullName>
    <label>affiliate</label>
    <length>30</length>
    <type>Text</type>
</CustomField>