force-app/main/default/objects/POE_Providers_Identifier__mdt/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <label>Identifier</label>
    <length>18</length>
    <type>Text</type>
</CustomField>