force-app/main/default/objects/POE_Providers_Identifier__mdt/fields/salesId__c.field-meta.xml
<CustomField>
    <fullName>salesId__c</fullName>
    <label>salesId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>